[package]
name = "dht-mmap-rust"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Kruse <mathis.nikolas.kruse@gmail.com>"]
license = "MIT"
description = "Simple access to DHT11 and DHT22 sensors for the Raspberry PI"
repository = "https://github.com/krusema/dht-mmap-rust"
documentation = "https://docs.rs/dht-mmap-rust"


[dependencies]
libc = "0.2.154"
memmap = "0.7.0"

